# payload-dumper

./: pyproject.toml
.github/workflows/: payload-dump.yml
src/payload_dumper/: __init__.py  dumper.py  future_util.py  http_file.py  mio.py  update_metadata.proto  update_metadata_pb2.py  update_metadata_pb2.pyi  ziputil.py
src/payload_dumper/mio/: __init__.py  __main__.py  _unix.py  _windows.py
